--- a/index.html
+++ b/index.html
@@ -116,5 +116,15 @@
     <h2 class="cover__title">До Байкала «на собаках»</h2>
     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
   </section>
+  <footer class="footer">
+    <ul class="footer__list">
+      <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link link">Карты</a></li>
+      <li class="footer__list-item"><a href="https://yandex.ru/pogoda" class="footer__link link">Погода</a></li>
+      <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__link link">Расписание</a></li>
+      <li class="footer__list-item"><a href="https://calendar.yandex.ru" class="footer__link link">Календарь</a></li>
+      <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__link link">Путешествия</a></li>
+    </ul>
+    <p class="footer__copiright">&copy; 2021. DariaJurr</p>
+  </footer>
 </body>
 </html>
