--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body class="root">
   <header class="header">
     <div class="header__logo"></div>        
-    <a href="#" class="header__lang-link link link_active">Ru</a>
+    <a href="#" class="header__lang-link header__lang-link_active link">Ru</a>
     <a href="#" class="header__lang-link link">En</a>    
   </header>
-  <section class="lead">
+<main>
+    <section class="lead">
     <h1 class="lead__title">Путешествия по России</h1>
     <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
     <img src="./images/lead-polka.jpg" alt="человек на полке вагона" class="lead__image">
@@ -45,7 +46,7 @@
   </section>
   <section class="places">
     <article class="place">
-      <h3 class="place__title">Куршская коса</h3>
+      <h2 class="place__title">Куршская коса</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="http://park-kosa.ru" class="place__link link">park-kosa.ru</a>
@@ -57,7 +58,7 @@
       </div>
     </article>
     <article class="place">
-      <h3 class="place__title">Кольский</h3>
+      <h2 class="place__title">Кольский</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" class="place__link link">National Geographic</a>
@@ -71,7 +72,7 @@
       </div>
     </article>
     <article class="place">
-      <h3 class="place__title">Алтай</h3>
+      <h2 class="place__title">Алтай</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" class="place__link link">Facebook</a>
@@ -84,7 +85,7 @@
       </div>
     </article>
     <article class="place">
-      <h3 class="place__title">Зимний Байкал</h3>
+      <h2 class="place__title">Зимний Байкал</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="https://vk.com/baikalmile" class="place__link link">https://vk.com/baikalmile</a>
@@ -98,7 +99,7 @@
       </div>
     </article>
     <article class="place">
-      <h3 class="place__title">Карелия</h3>
+      <h2 class="place__title">Карелия</h2>
       <div class="place__website">
         <p class="place__url-heading">URL</p>
         <a href="http://vodlozero.ru" class="place__link link">http://vodlozero.ru/</a>
@@ -116,14 +117,17 @@
     <h2 class="cover__title">До Байкала «на собаках»</h2>
     <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
   </section>
+</main>
   <footer class="footer">
-    <ul class="footer__list">
+    <nav>
+      <ul class="footer__list">
       <li class="footer__list-item"><a href="https://yandex.ru/maps" class="footer__link link">Карты</a></li>
       <li class="footer__list-item"><a href="https://yandex.ru/pogoda" class="footer__link link">Погода</a></li>
       <li class="footer__list-item"><a href="https://rasp.yandex.ru" class="footer__link link">Расписание</a></li>
       <li class="footer__list-item"><a href="https://calendar.yandex.ru" class="footer__link link">Календарь</a></li>
       <li class="footer__list-item"><a href="https://travel.yandex.ru" class="footer__link link">Путешествия</a></li>
     </ul>
+    </nav>
     <p class="footer__copiright">&copy; 2021. DariaJurr</p>
   </footer>
 </body>
